# AICoverGen

./: .dockerignore  .gitignore  AICoverGen_colab.ipynb  Dockerfile  Hina_Mod_AICoverGen_colab.ipynb  LICENSE  README.md  cog.yaml  docker-compose.yml  predict.py  pyproject.toml  requirements.txt  requirements_amd.txt  rocm_vars.txt  start_linux_amd.sh  ultimate_rvc_colab_by_medicenjona1.ipynb  urvc  urvc.bat  urvc.ps1  urvc.sh
models/mdxnet/: model_data.json
models/rvc/: public_models.json
notebooks/: AICoverGen_colab.ipynb  ultimate_rvc_colab.ipynb
notes/: TODO.md  app-doc.md  cli-doc.md  gradio.md
rvc_models/: MODELS.txt  public_models.json
song_output/: OUTPUT.txt
src/: EasierUI.py  app.py  available_models_index.json  cli.py  common.py  core.py  download_base_models.py  download_models.py  exceptions.py  extra_typing.py  generate_song_cover.py  init.py  main.py  manage_voice_models.py  mdx.py  rmvpe.py  rvc.py  typing_extra.py  vc_infer_pipeline.py  web.py  webui.py  webui_old.py
src/backend/: __init__.py  common.py  exceptions.py  generate_song_cover.py  manage_audio.py  manage_models.py  manage_voice_models.py  mdx.py  other_settings.py  typing_extra.py
src/cli/: __init__.py  generate_song_cover.py  main.py
src/configs/: requirements.txt
src/core/: __init__.py  common.py  exceptions.py  generate_song_cover.py  main.py  manage_audio.py  manage_models.py  other_settings.py  typing_extra.py
src/frontend/: __init__.py  common.py  typing_extra.py
src/frontend/tabs/: __init__.py  manage_audio.py  manage_models.py  multi_step_generation.py  one_click_generation.py  other_settings.py
src/infer_pack/: attentions.py  models.py  models_onnx.py  models_onnx_moess.py  modules.py
src/infer_pack/predictor/: FCPE.py  RMVPE.py
src/stubs/audio_separator/separator/: __init__.pyi
src/stubs/gradio/: __init__.pyi  events.pyi
src/stubs/pedalboard_native/io/: __init__.pyi
src/stubs/soundfile/: __init__.pyi
src/stubs/static_ffmpeg/: __init__.pyi
src/stubs/yt_dlp/: __init__.pyi
src/typing/sox/: __init__.pyi
src/typings/: extra.py
src/typings/audio_separator/separator/: __init__.pyi
src/typings/gradio/: __init__.pyi  events.pyi
src/typings/pedalboard_native/io/: __init__.pyi
src/typings/soundfile/: __init__.pyi
src/typings/sox/: __init__.pyi
src/typings/yt_dlp/: __init__.pyi
src/ultimate_rvc/: __init__.py  common.py
src/ultimate_rvc/cli/: __init__.py  generate_song_cover.py  main.py
src/ultimate_rvc/core/: __init__.py  common.py  exceptions.py  main.py  typing_extra.py
src/ultimate_rvc/core/generate/: __init__.py  song_cover.py
src/ultimate_rvc/core/manage/: __init__.py  audio.py  models.py  other_settings.py
src/ultimate_rvc/stubs/audio_separator/separator/: __init__.pyi
src/ultimate_rvc/stubs/gradio/: __init__.pyi  events.pyi
src/ultimate_rvc/stubs/pedalboard_native/io/: __init__.pyi
src/ultimate_rvc/stubs/sox/: __init__.pyi
src/ultimate_rvc/vc/: my_utils.py  rmvpe.py  rvc.py  trainset_preprocess_pipeline_print.py  vc_infer_pipeline.py
src/ultimate_rvc/vc/infer_pack/: attentions.py  models.py  models_onnx.py  models_onnx_moess.py  modules.py
src/ultimate_rvc/web/: __init__.py  common.py  main.py
src/ultimate_rvc/web/tabs/: __init__.py  manage_audio.py  manage_models.py  multi_step_generation.py  one_click_generation.py  other_settings.py
src/vc/: __init__.py  my_utils.py  rvc.py  trainset_preprocess_pipeline_print.py  vc_infer_pipeline.py
src/vc/infer_pack/: attentions.py  models.py  models_onnx.py  models_onnx_moess.py  modules.py
src/web/: __init__.py  common.py  typing_extra.py
src/web/tabs/: __init__.py  manage_audio.py  manage_models.py  multi_step_generation.py  one_click_generation.py  other_settings.py
